# polish_calc_lib

./: .gitignore  CMakeLists.txt  README.md
include/: polish_calc.hpp  polish_calc_exceptions.hpp
src/: operations.cpp  polish_calc.cpp  polish_calc_exceptions.cpp
tests/: CMakeLists.txt  GoogleTest-CMakeLists.txt.in  main.cpp
